chore(ecosystem.config.js): rename app name from 'sale-domain' to 'sell-domains' for better clarity and consistency feat(nginx.conf): update server_name to '_' to allow the server to respond to any hostname feat(package.json): add 'mini-svg-data-uri' as a dependency to enable the usage of SVG data URIs style(static/tailwind.css): update body background color and text color for better readability and aesthetics style(static/tailwind.css): add utility classes for pointer-events-none, fixed, absolute, relative, inset-0, left-0, top-0, z-10, flex, h-full, and w-full style(static/tailwind.css): add utility classes for select-none, items-center, and justify-center style(static/tailwind.css): update background colors and gradients for better visual appeal style(static/tailwind.css): add utility classes for text-2xl and text-transparent style(static/tailwind.css): add utility classes for background grid patterns and mask images style(static/tailwind.css): add responsive utility classes for text sizes style(styles/tailwind.css): add base styles for body background color and text color
chore(tailwind.config.js): add custom colors and utility classes for background images
chore(tailwind.config.js): add custom font family for display text
chore(tailwind.config.js): optimize SVG images to use tiny data URIs
chore(tailwind.config.js): add plugin to generate utility classes for background images
chore(tailwind.config.js): remove unused code and optimize imports

refactor(domain.ejs): remove unused HTML template file

refactor(home.ejs): update HTML lang attribute to English
refactor(home.ejs): update page title and meta description to use dynamic domain value
refactor(home.ejs): remove unused meta tags
refactor(home.ejs): update container class to fixed position with background and text styling

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -444,6 +444,13 @@ video {
   display: none;
 }
 
+body {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -544,64 +551,169 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.container {
+.pointer-events-none {
+  pointer-events: none;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.inset-0 {
+  inset: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.flex {
+  display: flex;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.w-full {
   width: 100%;
 }
 
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-primary-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 13 23 / var(--tw-bg-opacity));
+}
+
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.from-neutral-100 {
+  --tw-gradient-from: #f5f5f5 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(245 245 245 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-primary-100 {
+  --tw-gradient-from: #CED8E4 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(206 216 228 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-primary-50 {
+  --tw-gradient-from: #EAF3FF var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(234 243 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-neutral-500 {
+  --tw-gradient-to: #737373 var(--tw-gradient-to-position);
+}
+
+.to-primary-500 {
+  --tw-gradient-to: #5D7088 var(--tw-gradient-to-position);
+}
+
+.to-primary-400 {
+  --tw-gradient-to: #7789A2 var(--tw-gradient-to-position);
+}
+
+.to-primary-600 {
+  --tw-gradient-to: #48576B var(--tw-gradient-to-position);
+}
+
+.bg-clip-text {
+  -webkit-background-clip: text;
+          background-clip: text;
+}
+
+.font-display {
+  font-family: Oswald;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-transparent {
+  color: transparent;
+}
+
+.bg-grid-white\/\[0\.1\] {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(255 255 255 / 0.1)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+}
+
+.bg-grid-primary-100\/\[0\.5\] {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(206 216 228 / 0.5)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+}
+
+.bg-grid-primary-800\/\[0\.5\] {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(29 37 49 / 0.5)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+}
+
+.\[mask-image\:radial-gradient\(ellipse_at_center\2c transparent_20\%\2c black\)\] {
+  -webkit-mask-image: radial-gradient(ellipse at center,transparent 20%,black);
+          mask-image: radial-gradient(ellipse at center,transparent 20%,black);
+}
+
+.\[mask-image\:radial-gradient\(ellipse_at_center\2c transparent_10\%\2c black\)\] {
+  -webkit-mask-image: radial-gradient(ellipse at center,transparent 10%,black);
+          mask-image: radial-gradient(ellipse at center,transparent 10%,black);
+}
+
 @media (min-width: 640px) {
-  .container {
-    max-width: 640px;
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
 @media (min-width: 768px) {
-  .container {
-    max-width: 768px;
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
 @media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.grid {
-  display: grid;
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.bg-red-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
